[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"

[tool.setuptools]
python_requires = ">=3.11"

[project]
name = "addict-tracking-changes-fixed-attributes"
maintainers = [
 { name="Kabira K", email= "kabira@monallabs.in"}
]
readme= "README.md"
license = { file="LICENSE" }
dynamic = ["version", "description"]
dependencies = [
]
requires-python = ">=3.11"



[project.urls]
Source = "https://github.com/ofjustpy/addict-tracking-changes-fixed-attributes"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
